--- a/.env
+++ b/.env
@@ -9,5 +9,5 @@ POSTGRES_DATABASE="verceldb"
 
 AUTH_SECRET="Q73fkVdTFXE4wIe0wsdd0kK7EbFITaHGkneGn0utOPk=" # Added by `npx auth`. Read more: https://cli.authjs.dev
 
-GITHUB_ID="Iv23lioOamnWBWGkzZfW"
-GITHUB_SECRET="09f490f8cca33441873ea8a6d75fd4c3036f808f"
+GITHUB_ID="Ov23liZzdzVdFD9q3RbG"
+GITHUB_SECRET="55a246c941df71a4c0e9c4c91dbc65385feb21cc"
